fixed link to github

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         <a href="https://calm-rock-0583e3a03.3.azurestaticapps.net/handin-format.html">Aflv. 5</a>
     </div>
     <div>
-        <a href="https://loui9583.github.io/staticwebapp/">Static Website Link</a>
+        <a href="https://loui9583.github.io/webappstatic">Static Website Link</a>
         <span>|</span>
-        <a href="https://github.com/loui9583/staticwebapp/">GitHub Repository</a>
+        <a href="https://github.com/loui9583/webappstatic">GitHub Repository</a>
     </div>
 </div>
 
